AUGREL/src/objects/SfCase__x.object
<CustomObject>
    <description>SfCase</description>
    <externalDataSource>ODataService</externalDataSource>
    <externalName>SfCase</externalName>
    <fields>
        <fullName>MarketingCommPrefTextC__c</fullName>
        <description>MarketingCommPrefTextC</description>
        <externalDeveloperName>MarketingCommPrefTextC</externalDeveloperName>
        <label>MarketingCommPrefTextC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>abbreviatedConsentC__c</fullName>
        <description>abbreviatedConsentC</description>
        <externalDeveloperName>abbreviatedConsentC</externalDeveloperName>
        <label>abbreviatedConsentC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>abbreviatedConsentDateC__c</fullName>
        <description>abbreviatedConsentDateC</description>
        <externalDeveloperName>abbreviatedConsentDateC</externalDeveloperName>
        <label>abbreviatedConsentDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>accountId__c</fullName>
        <description>accountId</description>
        <externalDeveloperName>accountId</externalDeveloperName>
        <label>accountId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>accountTypeC__c</fullName>
        <description>accountTypeC</description>
        <externalDeveloperName>accountTypeC</externalDeveloperName>
        <label>accountTypeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>addressTypeC__c</fullName>
        <description>addressTypeC</description>
        <externalDeveloperName>addressTypeC</externalDeveloperName>
        <label>addressTypeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>affiliateMarketingPrivacyC__c</fullName>
        <description>affiliateMarketingPrivacyC</description>
        <externalDeveloperName>affiliateMarketingPrivacyC</externalDeveloperName>
        <label>affiliateMarketingPrivacyC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>allPrivacyOptionsC__c</fullName>
        <description>allPrivacyOptionsC</description>
        <externalDeveloperName>allPrivacyOptionsC</externalDeveloperName>
        <label>allPrivacyOptionsC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>attorneyIfAnyC__c</fullName>
        <description>attorneyIfAnyC</description>
        <externalDeveloperName>attorneyIfAnyC</externalDeveloperName>
        <label>attorneyIfAnyC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseNumber__c</fullName>
        <description>caseNumber</description>
        <externalDeveloperName>caseNumber</externalDeveloperName>
        <label>caseNumber</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>caseOutcomeC__c</fullName>
        <description>caseOutcomeC</description>
        <externalDeveloperName>caseOutcomeC</externalDeveloperName>
        <label>caseOutcomeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>certifiedUsedC__c</fullName>
        <description>certifiedUsedC</description>
        <externalDeveloperName>certifiedUsedC</externalDeveloperName>
        <label>certifiedUsedC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>closedDate__c</fullName>
        <description>closedDate</description>
        <externalDeveloperName>closedDate</externalDeveloperName>
        <label>closedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>collectionCntrPrmsesBrknC__c</fullName>
        <description>collectionCntrPrmsesBrknC</description>
        <externalDeveloperName>collectionCntrPrmsesBrknC</externalDeveloperName>
        <label>collectionCntrPrmsesBrknC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collectionCntrPrmsesKeptC__c</fullName>
        <description>collectionCntrPrmsesKeptC</description>
        <externalDeveloperName>collectionCntrPrmsesKeptC</externalDeveloperName>
        <label>collectionCntrPrmsesKeptC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collectionCurntPrmseStatusC__c</fullName>
        <description>collectionCurntPrmseStatusC</description>
        <externalDeveloperName>collectionCurntPrmseStatusC</externalDeveloperName>
        <label>collectionCurntPrmseStatusC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collectionLastListC__c</fullName>
        <description>collectionLastListC</description>
        <externalDeveloperName>collectionLastListC</externalDeveloperName>
        <label>collectionLastListC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collectionListDescriptionC__c</fullName>
        <description>collectionListDescriptionC</description>
        <externalDeveloperName>collectionListDescriptionC</externalDeveloperName>
        <label>collectionListDescriptionC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collectionListNumber1C__c</fullName>
        <description>collectionListNumber1C</description>
        <externalDeveloperName>collectionListNumber1C</externalDeveloperName>
        <label>collectionListNumber1C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collectionListNumber2C__c</fullName>
        <description>collectionListNumber2C</description>
        <externalDeveloperName>collectionListNumber2C</externalDeveloperName>
        <label>collectionListNumber2C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collectionListNumber3C__c</fullName>
        <description>collectionListNumber3C</description>
        <externalDeveloperName>collectionListNumber3C</externalDeveloperName>
        <label>collectionListNumber3C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collectionListStatus1C__c</fullName>
        <description>collectionListStatus1C</description>
        <externalDeveloperName>collectionListStatus1C</externalDeveloperName>
        <label>collectionListStatus1C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collectionListStatus2C__c</fullName>
        <description>collectionListStatus2C</description>
        <externalDeveloperName>collectionListStatus2C</externalDeveloperName>
        <label>collectionListStatus2C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collectionListStatus3C__c</fullName>
        <description>collectionListStatus3C</description>
        <externalDeveloperName>collectionListStatus3C</externalDeveloperName>
        <label>collectionListStatus3C</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collectionNbrOfMnthspstdueC__c</fullName>
        <description>collectionNbrOfMnthspstdueC</description>
        <externalDeveloperName>collectionNbrOfMnthspstdueC</externalDeveloperName>
        <label>collectionNbrOfMnthspstdueC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collectionPromiseAmount1C__c</fullName>
        <description>collectionPromiseAmount1C</description>
        <externalDeveloperName>collectionPromiseAmount1C</externalDeveloperName>
        <label>collectionPromiseAmount1C</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collectionPromiseAmount2C__c</fullName>
        <description>collectionPromiseAmount2C</description>
        <externalDeveloperName>collectionPromiseAmount2C</externalDeveloperName>
        <label>collectionPromiseAmount2C</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>collectionPromiseDate1C__c</fullName>
        <description>collectionPromiseDate1C</description>
        <externalDeveloperName>collectionPromiseDate1C</externalDeveloperName>
        <label>collectionPromiseDate1C</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>collectionPromiseDate2C__c</fullName>
        <description>collectionPromiseDate2C</description>
        <externalDeveloperName>collectionPromiseDate2C</externalDeveloperName>
        <label>collectionPromiseDate2C</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>collectionRecourseCodeC__c</fullName>
        <description>collectionRecourseCodeC</description>
        <externalDeveloperName>collectionRecourseCodeC</externalDeveloperName>
        <label>collectionRecourseCodeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>collectionReviewDateC__c</fullName>
        <description>collectionReviewDateC</description>
        <externalDeveloperName>collectionReviewDateC</externalDeveloperName>
        <label>collectionReviewDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>collectionUserIdC__c</fullName>
        <description>collectionUserIdC</description>
        <externalDeveloperName>collectionUserIdC</externalDeveloperName>
        <label>collectionUserIdC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>communicationCommentsC__c</fullName>
        <description>communicationCommentsC</description>
        <externalDeveloperName>communicationCommentsC</externalDeveloperName>
        <label>communicationCommentsC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>complaintInitiatedByC__c</fullName>
        <description>complaintInitiatedByC</description>
        <externalDeveloperName>complaintInitiatedByC</externalDeveloperName>
        <label>complaintInitiatedByC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>complaintSubmittedC__c</fullName>
        <description>complaintSubmittedC</description>
        <externalDeveloperName>complaintSubmittedC</externalDeveloperName>
        <label>complaintSubmittedC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>contactId__c</fullName>
        <description>contactId</description>
        <externalDeveloperName>contactId</externalDeveloperName>
        <label>contactId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>createdDate__c</fullName>
        <description>createdDate</description>
        <externalDeveloperName>createdDate</externalDeveloperName>
        <label>createdDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>createdId__c</fullName>
        <description>createdId</description>
        <externalDeveloperName>createdId</externalDeveloperName>
        <label>createdId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>creditAppReportingPrivacyC__c</fullName>
        <description>creditAppReportingPrivacyC</description>
        <externalDeveloperName>creditAppReportingPrivacyC</externalDeveloperName>
        <label>creditAppReportingPrivacyC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentAddressC__c</fullName>
        <description>currentAddressC</description>
        <externalDeveloperName>currentAddressC</externalDeveloperName>
        <label>currentAddressC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentAddressNameC__c</fullName>
        <description>currentAddressNameC</description>
        <externalDeveloperName>currentAddressNameC</externalDeveloperName>
        <label>currentAddressNameC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentCareOfC__c</fullName>
        <description>currentCareOfC</description>
        <externalDeveloperName>currentCareOfC</externalDeveloperName>
        <label>currentCareOfC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentCityC__c</fullName>
        <description>currentCityC</description>
        <externalDeveloperName>currentCityC</externalDeveloperName>
        <label>currentCityC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentEmailAddressC__c</fullName>
        <description>currentEmailAddressC</description>
        <externalDeveloperName>currentEmailAddressC</externalDeveloperName>
        <label>currentEmailAddressC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentFaxNumberC__c</fullName>
        <description>currentFaxNumberC</description>
        <externalDeveloperName>currentFaxNumberC</externalDeveloperName>
        <label>currentFaxNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentForeignCountryC__c</fullName>
        <description>currentForeignCountryC</description>
        <externalDeveloperName>currentForeignCountryC</externalDeveloperName>
        <label>currentForeignCountryC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentHomeNumberC__c</fullName>
        <description>currentHomeNumberC</description>
        <externalDeveloperName>currentHomeNumberC</externalDeveloperName>
        <label>currentHomeNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentHomeNumberDncC__c</fullName>
        <description>currentHomeNumberDncC</description>
        <externalDeveloperName>currentHomeNumberDncC</externalDeveloperName>
        <label>currentHomeNumberDncC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentHomeNumberInvalidC__c</fullName>
        <description>currentHomeNumberInvalidC</description>
        <externalDeveloperName>currentHomeNumberInvalidC</externalDeveloperName>
        <label>currentHomeNumberInvalidC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentHomeNumberMobileC__c</fullName>
        <description>currentHomeNumberMobileC</description>
        <externalDeveloperName>currentHomeNumberMobileC</externalDeveloperName>
        <label>currentHomeNumberMobileC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentMileageC__c</fullName>
        <description>currentMileageC</description>
        <externalDeveloperName>currentMileageC</externalDeveloperName>
        <label>currentMileageC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentMobileNbrInvalidC__c</fullName>
        <description>currentMobileNbrInvalidC</description>
        <externalDeveloperName>currentMobileNbrInvalidC</externalDeveloperName>
        <label>currentMobileNbrInvalidC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentMobileNumberC__c</fullName>
        <description>currentMobileNumberC</description>
        <externalDeveloperName>currentMobileNumberC</externalDeveloperName>
        <label>currentMobileNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentMobileNumberDncC__c</fullName>
        <description>currentMobileNumberDncC</description>
        <externalDeveloperName>currentMobileNumberDncC</externalDeveloperName>
        <label>currentMobileNumberDncC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentMobileNumberMobileC__c</fullName>
        <description>currentMobileNumberMobileC</description>
        <externalDeveloperName>currentMobileNumberMobileC</externalDeveloperName>
        <label>currentMobileNumberMobileC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentStateC__c</fullName>
        <description>currentStateC</description>
        <externalDeveloperName>currentStateC</externalDeveloperName>
        <label>currentStateC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentWorkNumberC__c</fullName>
        <description>currentWorkNumberC</description>
        <externalDeveloperName>currentWorkNumberC</externalDeveloperName>
        <label>currentWorkNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentWorkNumberDncC__c</fullName>
        <description>currentWorkNumberDncC</description>
        <externalDeveloperName>currentWorkNumberDncC</externalDeveloperName>
        <label>currentWorkNumberDncC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentWorkNumberInvalidC__c</fullName>
        <description>currentWorkNumberInvalidC</description>
        <externalDeveloperName>currentWorkNumberInvalidC</externalDeveloperName>
        <label>currentWorkNumberInvalidC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentWorkNumberMobileC__c</fullName>
        <description>currentWorkNumberMobileC</description>
        <externalDeveloperName>currentWorkNumberMobileC</externalDeveloperName>
        <label>currentWorkNumberMobileC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>currentZipCodeC__c</fullName>
        <description>currentZipCodeC</description>
        <externalDeveloperName>currentZipCodeC</externalDeveloperName>
        <label>currentZipCodeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currentZipCodeExtnC__c</fullName>
        <description>currentZipCodeExtnC</description>
        <externalDeveloperName>currentZipCodeExtnC</externalDeveloperName>
        <label>currentZipCodeExtnC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dateOfComplaintC__c</fullName>
        <description>dateOfComplaintC</description>
        <externalDeveloperName>dateOfComplaintC</externalDeveloperName>
        <label>dateOfComplaintC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>dealerC__c</fullName>
        <description>dealerC</description>
        <externalDeveloperName>dealerC</externalDeveloperName>
        <label>dealerC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>description__c</fullName>
        <description>description</description>
        <externalDeveloperName>description</externalDeveloperName>
        <label>description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>editMessageC__c</fullName>
        <description>editMessageC</description>
        <externalDeveloperName>editMessageC</externalDeveloperName>
        <label>editMessageC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>electronicBusnAgreementC__c</fullName>
        <description>electronicBusnAgreementC</description>
        <externalDeveloperName>electronicBusnAgreementC</externalDeveloperName>
        <label>electronicBusnAgreementC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>electronicBusnAgreemntDtC__c</fullName>
        <description>electronicBusnAgreemntDtC</description>
        <externalDeveloperName>electronicBusnAgreemntDtC</externalDeveloperName>
        <label>electronicBusnAgreemntDtC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>financeReasonC__c</fullName>
        <description>financeReasonC</description>
        <externalDeveloperName>financeReasonC</externalDeveloperName>
        <label>financeReasonC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financialAccountC__c</fullName>
        <description>financialAccountC</description>
        <externalDeveloperName>financialAccountC</externalDeveloperName>
        <label>financialAccountC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financialAccountCustmrIdC__c</fullName>
        <description>financialAccountCustmrIdC</description>
        <externalDeveloperName>financialAccountCustmrIdC</externalDeveloperName>
        <label>financialAccountCustmrIdC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>financialAccountCustomerC__c</fullName>
        <description>financialAccountCustomerC</description>
        <externalDeveloperName>financialAccountCustomerC</externalDeveloperName>
        <label>financialAccountCustomerC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fromRuleC__c</fullName>
        <description>fromRuleC</description>
        <externalDeveloperName>fromRuleC</externalDeveloperName>
        <label>fromRuleC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>goodThruDateC__c</fullName>
        <description>goodThruDateC</description>
        <externalDeveloperName>goodThruDateC</externalDeveloperName>
        <label>goodThruDateC</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>grossPayOffC__c</fullName>
        <description>grossPayOffC</description>
        <externalDeveloperName>grossPayOffC</externalDeveloperName>
        <label>grossPayOffC</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>immediateActionC__c</fullName>
        <description>immediateActionC</description>
        <externalDeveloperName>immediateActionC</externalDeveloperName>
        <label>immediateActionC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>initialRlScoreC__c</fullName>
        <description>initialRlScoreC</description>
        <externalDeveloperName>initialRlScoreC</externalDeveloperName>
        <label>initialRlScoreC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>integrationIdC__c</fullName>
        <description>integrationIdC</description>
        <externalDeveloperName>integrationIdC</externalDeveloperName>
        <label>integrationIdC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isClosed__c</fullName>
        <description>isClosed</description>
        <externalDeveloperName>isClosed</externalDeveloperName>
        <label>isClosed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isDeleted__c</fullName>
        <description>isDeleted</description>
        <externalDeveloperName>isDeleted</externalDeveloperName>
        <label>isDeleted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isEscalated__c</fullName>
        <description>isEscalated</description>
        <externalDeveloperName>isEscalated</externalDeveloperName>
        <label>isEscalated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>issueCategoryC__c</fullName>
        <description>issueCategoryC</description>
        <externalDeveloperName>issueCategoryC</externalDeveloperName>
        <label>issueCategoryC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>kmParentCaseSubjectC__c</fullName>
        <description>kmParentCaseSubjectC</description>
        <externalDeveloperName>kmParentCaseSubjectC</externalDeveloperName>
        <label>kmParentCaseSubjectC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>languagePreferenceC__c</fullName>
        <description>languagePreferenceC</description>
        <externalDeveloperName>languagePreferenceC</externalDeveloperName>
        <label>languagePreferenceC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastCommentC__c</fullName>
        <description>lastCommentC</description>
        <externalDeveloperName>lastCommentC</externalDeveloperName>
        <label>lastCommentC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastModifiedById__c</fullName>
        <description>lastModifiedById</description>
        <externalDeveloperName>lastModifiedById</externalDeveloperName>
        <label>lastModifiedById</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastModifiedByLanIdC__c</fullName>
        <description>lastModifiedByLanIdC</description>
        <externalDeveloperName>lastModifiedByLanIdC</externalDeveloperName>
        <label>lastModifiedByLanIdC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastModifiedDate__c</fullName>
        <description>lastModifiedDate</description>
        <externalDeveloperName>lastModifiedDate</externalDeveloperName>
        <label>lastModifiedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>make__c</fullName>
        <description>make</description>
        <externalDeveloperName>make</externalDeveloperName>
        <label>make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marketingCommPrefEmailC__c</fullName>
        <description>marketingCommPrefEmailC</description>
        <externalDeveloperName>marketingCommPrefEmailC</externalDeveloperName>
        <label>marketingCommPrefEmailC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marketingCommPrefHmPhnC__c</fullName>
        <description>marketingCommPrefHmPhnC</description>
        <externalDeveloperName>marketingCommPrefHmPhnC</externalDeveloperName>
        <label>marketingCommPrefHmPhnC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marketingCommPrefMobPhnC__c</fullName>
        <description>marketingCommPrefMobPhnC</description>
        <externalDeveloperName>marketingCommPrefMobPhnC</externalDeveloperName>
        <label>marketingCommPrefMobPhnC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>marketingCommPrefWrkPhnC__c</fullName>
        <description>marketingCommPrefWrkPhnC</description>
        <externalDeveloperName>marketingCommPrefWrkPhnC</externalDeveloperName>
        <label>marketingCommPrefWrkPhnC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netPayOffC__c</fullName>
        <description>netPayOffC</description>
        <externalDeveloperName>netPayOffC</externalDeveloperName>
        <label>netPayOffC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newAddressC__c</fullName>
        <description>newAddressC</description>
        <externalDeveloperName>newAddressC</externalDeveloperName>
        <label>newAddressC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newAddressNameC__c</fullName>
        <description>newAddressNameC</description>
        <externalDeveloperName>newAddressNameC</externalDeveloperName>
        <label>newAddressNameC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newCareOfC__c</fullName>
        <description>newCareOfC</description>
        <externalDeveloperName>newCareOfC</externalDeveloperName>
        <label>newCareOfC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newCityC__c</fullName>
        <description>newCityC</description>
        <externalDeveloperName>newCityC</externalDeveloperName>
        <label>newCityC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newCountryC__c</fullName>
        <description>newCountryC</description>
        <externalDeveloperName>newCountryC</externalDeveloperName>
        <label>newCountryC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newEmailAddressC__c</fullName>
        <description>newEmailAddressC</description>
        <externalDeveloperName>newEmailAddressC</externalDeveloperName>
        <label>newEmailAddressC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newHomeNumberC__c</fullName>
        <description>newHomeNumberC</description>
        <externalDeveloperName>newHomeNumberC</externalDeveloperName>
        <label>newHomeNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newHomeNumberDncC__c</fullName>
        <description>newHomeNumberDncC</description>
        <externalDeveloperName>newHomeNumberDncC</externalDeveloperName>
        <label>newHomeNumberDncC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newHomeNumberInvalidC__c</fullName>
        <description>newHomeNumberInvalidC</description>
        <externalDeveloperName>newHomeNumberInvalidC</externalDeveloperName>
        <label>newHomeNumberInvalidC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newHomeNumberMobileC__c</fullName>
        <description>newHomeNumberMobileC</description>
        <externalDeveloperName>newHomeNumberMobileC</externalDeveloperName>
        <label>newHomeNumberMobileC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newMobileNumberC__c</fullName>
        <description>newMobileNumberC</description>
        <externalDeveloperName>newMobileNumberC</externalDeveloperName>
        <label>newMobileNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newMobileNumberDncC__c</fullName>
        <description>newMobileNumberDncC</description>
        <externalDeveloperName>newMobileNumberDncC</externalDeveloperName>
        <label>newMobileNumberDncC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newMobileNumberInvalidC__c</fullName>
        <description>newMobileNumberInvalidC</description>
        <externalDeveloperName>newMobileNumberInvalidC</externalDeveloperName>
        <label>newMobileNumberInvalidC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newMobileNumberMobileC__c</fullName>
        <description>newMobileNumberMobileC</description>
        <externalDeveloperName>newMobileNumberMobileC</externalDeveloperName>
        <label>newMobileNumberMobileC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newStateC__c</fullName>
        <description>newStateC</description>
        <externalDeveloperName>newStateC</externalDeveloperName>
        <label>newStateC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newWorkNumberC__c</fullName>
        <description>newWorkNumberC</description>
        <externalDeveloperName>newWorkNumberC</externalDeveloperName>
        <label>newWorkNumberC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>newWorkNumberDncC__c</fullName>
        <description>newWorkNumberDncC</description>
        <externalDeveloperName>newWorkNumberDncC</externalDeveloperName>
        <label>newWorkNumberDncC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newWorkNumberInvalidC__c</fullName>
        <description>newWorkNumberInvalidC</description>
        <externalDeveloperName>newWorkNumberInvalidC</externalDeveloperName>
        <label>newWorkNumberInvalidC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newWorkNumberMobileC__c</fullName>
        <description>newWorkNumberMobileC</description>
        <externalDeveloperName>newWorkNumberMobileC</externalDeveloperName>
        <label>newWorkNumberMobileC</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>newZipCodeC__c</fullName>
        <description>newZipCodeC</description>
        <externalDeveloperName>newZipCodeC</externalDeveloperName>
        <label>newZipCodeC</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>